// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`>>> AltinnRadioButtonGroup.tsx +++ Should match snapshot with all params  1`] = `
<div
  className="makeStyles-altinnRadioGroupWrapper-2"
>
  <p
    className="MuiTypography-root makeStyles-altinnRadioGroupDescription-3 MuiTypography-body1"
  >
    mock-description
  </p>
  <div
    className="MuiFormGroup-root makeStyles-altinnRadioGroup-1 mock-classname MuiFormGroup-row"
    id="mock-id"
    role="radiogroup"
  >
    <span
      aria-disabled={false}
      className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-7 MuiRadio-root makeStyles-altinnRadio-6 MuiRadio-colorSecondary MuiIconButton-colorSecondary"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label"
      >
        <input
          checked={false}
          className="PrivateSwitchBase-input-10"
          name="radioGroup"
          onChange={[Function]}
          type="radio"
        />
        <div
          className="PrivateRadioButtonIcon-root-11"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root PrivateRadioButtonIcon-layer-12"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
            />
          </svg>
        </div>
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </span>
  </div>
</div>
`;

exports[`>>> AltinnRadioButtonGroup.tsx +++ Should match snapshot with the least amount of params 1`] = `
<div
  className="makeStyles-altinnRadioGroupWrapper-2"
>
  <div
    className="MuiFormGroup-root makeStyles-altinnRadioGroup-1"
    role="radiogroup"
  >
    <span
      aria-disabled={false}
      className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-7 MuiRadio-root makeStyles-altinnRadio-6 MuiRadio-colorSecondary MuiIconButton-colorSecondary"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label"
      >
        <input
          checked={false}
          className="PrivateSwitchBase-input-10"
          name="radioGroup"
          onChange={[Function]}
          type="radio"
        />
        <div
          className="PrivateRadioButtonIcon-root-11"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root PrivateRadioButtonIcon-layer-12"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
            />
          </svg>
        </div>
      </span>
    </span>
  </div>
</div>
`;
